# claude-research-pack

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  INSTALL_WINDOWS.md  LICENSE  README.md  USAGE.md
commands/: capture-paper.md  copilot.md  ingest-pdf.md  lit-map.md  port-to-vault.md  research.md  status.md  use-project.md
desktop-skills/academic-deep-research/: SKILL.md
desktop-skills/capture-research-state/: SKILL.md
desktop-skills/deep-research/: SKILL.md
desktop-skills/ingest-pdf/: SKILL.md
desktop-skills/lit-status/: SKILL.md
desktop-skills/paper-capture/: SKILL.md
desktop-skills/paper-map/: SKILL.md
desktop-skills/research-copilot/: SKILL.md
desktop-skills/resume-research-state/: SKILL.md
desktop-skills/sync-check/: SKILL.md
hooks/: paper-mention-detect.py  precompact-handoff.py  session-start-context.py  statusline.ps1  statusline.sh  stop-persist-todos.py
mcp-servers/: README.md  install-mcp-servers.ps1  install-mcp-servers.sh  obsidian-wrapper.js
mcp-servers/university-paper-access/: pyproject.toml  server.py
scripts/: Set-ActiveProject.ps1  path-a-selftest.sh  path-b-selftest.ps1  prepare-desktop-pack.ps1  setup.ps1  setup.sh
settings/: claude.template.json  claude.windows.template.json  claude_desktop_config.template.json  settings.template.json  settings.windows.template.json
skills/deep-research/: SKILL.md
skills/handoff/: SKILL.md
skills/ingest-pdf/: SKILL.md
skills/lit-status/: SKILL.md
skills/paper-capture/: SKILL.md
skills/research-copilot/: SKILL.md
skills/use-project/: SKILL.md
tools/: research_sync_agent.py
(+58 files in other folders)
