[project]
name = "university-paper-access"
version = "0.1.0"
description = "MCP server for academic paper search and download via university network access"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
university-paper-access = "server:mcp.run"
